# zeitgeist-bridge

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  meson.build  package-lock.json  package.json  uncrustify.cfg
data/: com.paysonwallach.zeitgeist.bridge.json  com.paysonwallach.zeitgeist.browser.json
meson/: post_install.py
meta/: README.md.njk
src/: ExtensionProxy.vala  Main.vala  Message.vala  Protocol.vala  Utils.vala
src/Utils/: Serializable.vala
vapi/: config.vapi
